--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "My first json sever testing",
   "main": "index.js",
   "scripts": {
-    "json:server": "json-server --watch db.json"
+    "json:server": "json-server --watch db.json",
+    "generate:db": "node ./db_generator"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "faker": "^4.1.0",
+    "install": "^0.12.2",
     "json-server": "^0.15.0",
-    "lodash": "^1.0.0"
+    "lodash": "^1.0.0",
+    "lowdb": "^1.0.0",
+    "npm": "^6.9.0"
   }
 }
